# simulation-physics

./: .gitignore  CMakeLists.txt  Makefile-mac  commands  run.bat  run.sh
include/: batch.hpp  camera.hpp  circle.hpp  entitysystem.hpp  loader.hpp  mesh.hpp  object.hpp  object1.hpp  particle.hpp  polygon.h  pool.hpp  shader.hpp  triangle.hpp  vertex.hpp  window.hpp  world.hpp
include/ui/: ui.hpp
lib/glfw-3.4/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/glfw-3.4/docs/: Makefile  cmake_install.cmake
lib/glfw-3.4/src/: Makefile  cmake_install.cmake
shaders/: default_fragment.glsl  default_fragment_circle.glsl  default_vertex.glsl  default_vertex_circle.glsl  particles_vertex.glsl
src/: CMakeLists.txt  camera.cpp  circle.cpp  entitysystem.cpp  loader.cpp  main.c  main.cpp  mesh.cpp  object.cpp  particle.cpp  polygon.cpp  render.cpp  shader.cpp  triangle.cpp  window.cpp  world.cpp
src/ui/: ui.cpp
